--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,10 @@ jobs:
         run: |
           npm install
           npm run build
+      - uses: actions/ipload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
 
   test:
     runs-on: ubuntu-latest
