--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,24 +12,35 @@ jobs:
         run: |
           npm install
           npm run build
-      - uses: actions/ipload-artifact@master
+      - uses: actions/upload-artifact@master
         with:
           name: webpack artifacts
-          path: public/
+          path: public
+      - name: Use Node.js ${{matrix.node-version}}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{matrix.node-version}}
+      - name: npm install, and test
+        run: |
+          npm install
+          npm test
+        env:
+          CI: true
+      
 
   test:
     runs-on: ubuntu-latest
-    - uses: actions/download-artifact@main
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
+    
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
 
     steps:
+    - uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
